--- a/gitvsc-test.html
+++ b/gitvsc-test.html
@@ -37,7 +37,7 @@
 
         <p class="flowtext">RANDOM SHIT</p>
         
-        <h3 class="purple-text text-darken-2">Ito na ba yun hahahaa</h3>
+        <h3 class="purple-text text-darken-2">Ito na ba yun hahaa</h3>
         <div style="height: 120px;"></div>
 
     </div>
