--- a/gitvsc-test.html
+++ b/gitvsc-test.html
@@ -43,15 +43,25 @@
 
         <h1>HELLO WORLD 123456</h1>
 
-
-        <div style="height: 120px;"></div>
-
     </div>
 
+    <div class="divider"></div>
+    <div class="divider"></div>
+    <div class="divider"></div>
+    <div class="divider"></div>
+    <div class="divider"></div>
 
+    <h1 class="red-text text-darken-2 center">POGI KO</h1>
+    <div class="divider"></div>
 
-     <!-- Compiled and minified JavaScript -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <div class="container">  
+        <p class="flot-text">ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO ANG POGI KO POGI KO POGI KO POGI KO POGI KO POGI KO </p>
+    
+    </div>
+
+    <div style="height: 120px;"></div>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     
 </body>
 </html>
