--- a/gitvsc-test.html
+++ b/gitvsc-test.html
@@ -43,6 +43,7 @@
 
         <h1>HELLO WORLD 123456</h1>
 
+        <h1 class="purple-text text-darken-2">This is Amazing!</h1>
 
         <div style="height: 120px;"></div>
 
